tests/ui/derive-invariant/helper-empty/expected
error: Cannot derive impl for `PositivePoint`
   |
11 | #[derive(kani::Invariant)]
   |          ^^^^^^^^^^^^^^^
   |
note: invariant condition in field `x` could not be parsed: expected attribute arguments in parentheses: #[safety_constraint(...)]
